// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform types Should transform User 1`] = `
"import { jsx as _jsx } from \\"@whatsup/jsx\\";

_jsx(User, \\"UniqueId_\\", {
  children: \\"foobar\\"
});"
`;

exports[`transform types Should transform div 1`] = `
"import { jsx as _jsx } from \\"@whatsup/jsx\\";

_jsx(\\"div\\", \\"UniqueId_\\", {
  children: \\"foobar\\"
});"
`;

exports[`transform types Should transform fragment 1`] = `
"import { Fragment as _Fragment } from \\"@whatsup/jsx\\";
import { jsx as _jsx } from \\"@whatsup/jsx\\";

_jsx(_Fragment, \\"UniqueId_\\", {
  children: \\"foobar\\"
});"
`;

exports[`transform types Should transform svg 1`] = `
"import { jsx as _jsx } from \\"@whatsup/jsx\\";

_jsx(\\"svg\\", \\"UniqueId_\\", {
  children: \\"foobar\\"
});"
`;
